# python-desfire

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: index.md  key-diversification.md  supported-commands.md  usage.md
docs/api/: desfire.md  diversification.md  key.md  utility.md
docs/api/enums/: communication_mode.md  file_permissions.md  file_settings.md  key_settings.md
src/: example.py  example2.py  interactive.py
src/desfire/: DESFire.py  DESFire_DEF.py  __init__.py  cmac.py  device.py  diversify.py  exceptions.py  key.py  pcsc.py  util.py
src/desfire/devices/: base.py  pcsc.py  pn532.py
src/desfire/enums/: __init__.py  desfire_command.py  desfire_communication_mode.py  desfire_filetype.py  desfire_keysettings.py  desfire_keytype.py  desfire_status.py
src/desfire/file/: permissions.py  settings.py
src/desfire/key/: card_version.py  cmac.py  crypto.py  key.py  keyset.py
src/desfire/schemas/: __init__.py  card_version.py  file_permissions.py  file_settings.py  key_settings.py
src/examples/: minimal.py  minimal_pn532.py  personalize.py  reset.py
tests/: test_diversify.py  tests_test_card_version_repr.py
